# nonnegative-rank-bounds

./: CMakeLists.txt  README.md
cmake/: FindGMP.cmake  FindSCIP.cmake  FindSoPlex.cmake  FindZIMPL.cmake
cpm/: CMakeLists.txt  core.cpp  core.h  separation_oracle.cpp  separation_oracle.h  solver.cpp  solver.h  solver_soplex.cpp  solver_soplex.h
src/: CMakeLists.txt  enum_oracle.cpp  enum_oracle.h  main.cpp  scip_exception.h  scip_oracle.cpp  scip_oracle.h  slackmatrix.cpp  slackmatrix.h
